crates/squawk_parser/src/snapshots/parser__test__create_role_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/create_role.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_ROLE_STMT
    CREATE_KW "create"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    NAME
      IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_ROLE_STMT
    CREATE_KW "create"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    NAME
      IDENT "u"
    WHITESPACE "\n   "
    WITH_KW "with"
    WHITESPACE " "
    IDENT "superuser"
    WHITESPACE "\n   "
    IDENT "nosuperuser"
    WHITESPACE "\n   "
    IDENT "nosuperuser"
    WHITESPACE "\n   "
    IDENT "createdb"
    WHITESPACE "\n   "
    IDENT "nocreatedb"
    WHITESPACE "\n   "
    IDENT "createrole"
    WHITESPACE "\n   "
    IDENT "nocreaterole"
    WHITESPACE "\n   "
    INHERIT_KW "inherit"
    WHITESPACE "\n   "
    IDENT "noinherit"
    WHITESPACE "\n   "
    IDENT "login"
    WHITESPACE "\n   "
    IDENT "nologin"
    WHITESPACE "\n   "
    IDENT "replication"
    WHITESPACE "\n   "
    IDENT "noreplication"
    WHITESPACE "\n   "
    IDENT "bypassrls"
    WHITESPACE "\n   "
    IDENT "nobypassrls"
    WHITESPACE "\n   "
    CONNECTION_KW "connection"
    WHITESPACE " "
    LIMIT_KW "limit"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "100"
    WHITESPACE "\n   "
    ENCRYPTED_KW "encrypted"
    WHITESPACE " "
    PASSWORD_KW "password"
    WHITESPACE " "
    LITERAL
      STRING "'foo'"
    WHITESPACE "\n   "
    PASSWORD_KW "password"
    WHITESPACE " "
    LITERAL
      STRING "'bar'"
    WHITESPACE " "
    PASSWORD_KW "password"
    WHITESPACE " "
    NULL_KW "null"
    WHITESPACE "\n   "
    VALID_KW "valid"
    WHITESPACE " "
    UNTIL_KW "until"
    WHITESPACE " "
    LITERAL
      STRING "'2042-02-22'"
    WHITESPACE "\n   "
    IN_KW "in"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IDENT "foo"
    COMMA ","
    WHITESPACE " "
    IDENT "bar"
    COMMA ","
    WHITESPACE " "
    IDENT "buzz"
    WHITESPACE "\n   "
    IN_KW "in"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    IDENT "foo"
    WHITESPACE "\n   "
    ADMIN_KW "admin"
    WHITESPACE " "
    IDENT "foo"
    WHITESPACE "\n   "
    SYSID_KW "sysid"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "100"
  SEMICOLON ";"
  WHITESPACE "\n\n"
